--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "dependencies": {
     "aws-sdk": "^2.2.39",
     "browserify": "^13.0.0",
-    "canvas": "git+https://github.com/chearon/node-canvas.git#12971f64a66b",
+    "canvas": "^2.6.1",
     "compression": "^1.6.1",
     "d3": "4.10.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.3",
+    "fabric": "^3.6.3",
     "jquery": "^2.2.1",
     "mkdirp": "^0.5.1",
     "morgan": "^1.7.0",
